--- a/index.html
+++ b/index.html
@@ -3,163 +3,115 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Fun X – فيديوهات اليوم</title>
+<title>Fun X – إصدار 1.5</title>
 <style>
-body {
-    margin: 0;
-    padding: 0;
-    font-family: "Georgia", serif;
-    color: #fff;
-    overflow-x: hidden;
-    transition: background 2s;
-    background: #000;
+*{margin:0;padding:0;box-sizing:border-box;font-family:"Georgia", serif;}
+body{overflow-x:hidden;color:#fff;transition:background 1s;}
+
+/* النجوم */
+.stars{position:fixed;width:100%;height:100%;z-index:-3;}
+.star{position:absolute;border-radius:50%;background:#fff;animation:twinkle 6s linear infinite;opacity:0;}
+@keyframes twinkle{0%,100%{opacity:0.2;}50%{opacity:1;}}
+
+/* القمر والشمس */
+.celestial{position:fixed;width:100px;height:100px;border-radius:50%;box-shadow:0 0 30px #fff;z-index:-2;transition:all 1s linear;}
+
+/* الغيوم */
+.cloud{position:fixed;width:300px;height:80px;background:rgba(255,255,255,0.05);border-radius:50%;animation:cloudMove 120s linear infinite;z-index:-1;}
+.cloud:nth-child(2){top:50%;width:500px;height:100px;animation-duration:200s;}
+@keyframes cloudMove{0%{left:-500px;}100%{left:100%;}}
+
+/* الهيدر */
+header{
+  position:fixed; top:0; width:100%; height:80px; display:flex; align-items:center; justify-content:space-between;
+  background:rgba(0,0,0,0.85); color:#fc0000; padding:0 30px; z-index:1000; box-shadow:0 0 20px #000;
+  backdrop-filter: blur(8px);
+  border-bottom: 2px solid rgba(255,255,255,0.2);
 }
 
-/* ⭐ النجوم */
-.stars { position: fixed; width: 100%; height: 100%; z-index: -3; }
-.star {
-    position: absolute;
-    border-radius: 50%;
-    background: #fff;
-    animation: twinkle 6s linear infinite;
-    opacity: 0;
-}
-@keyframes twinkle { 0%,100% { opacity: 0.2; } 50% { opacity: 1; } }
-
-/* 🌙 / ☀️ القمر والشمس */
-.celestial {
-    position: fixed;
-    width: 100px; height: 100px;
-    border-radius: 50%;
-    box-shadow: 0 0 30px #fff;
-    z-index: -2;
-    transition: all 1s linear;
+/* اسم الموقع */
+#siteName{
+  font-size:28px;
+  font-weight:bold;
+  text-shadow:0 0 10px #f83a00, 0 0 20px #ff4500;
+  letter-spacing:1px;
 }
 
-/* ☁️ الغيوم تتحرك */
-.cloud { position: fixed; top:20%; width:300px; height:80px; background: rgba(255,255,255,0.05); border-radius:50%; animation: cloudMove 120s linear infinite; z-index:-1; }
-.cloud:nth-child(2) { top:50%; width:500px; height:100px; animation-duration:200s; }
-@keyframes cloudMove { 0% { left:-500px; } 100% { left:100%; } }
+/* الوقت والتقويم */
+#timeCalendarWrapper{
+  display:flex;
+  flex-direction:column;
+  align-items:flex-end;
+  background: rgba(0,0,0,0.4);
+  padding:10px 16px;
+  border-radius:14px;
+  box-shadow: 0 0 20px #0ff inset, 0 0 40px #0ff;
+  animation: glowClock 2s ease-in-out infinite alternate;
+}
+@keyframes glowClock{
+  0%{box-shadow: 0 0 20px #0ff inset, 0 0 40px #0ff;}
+  50%{box-shadow: 0 0 30px #0ff inset, 0 0 60px #0ff;}
+  100%{box-shadow: 0 0 20px #0ff inset, 0 0 40px #0ff;}
+}
+#timeCalendar{
+  display:flex;
+  flex-direction:column;
+  align-items:flex-end;
+  font-family:'Courier New', Courier, monospace;
+  color:#0ff;
+  text-shadow: 0 0 15px #0ff, 0 0 30px #0ff, 0 0 40px #00ffff;
+  letter-spacing:2px;
+}
+#clock{font-size:36px;font-weight:bold;}
+#calendar{font-size:20px;font-weight:bold;color:#0ff;text-shadow:0 0 10px #0ff,0 0 20px #0ff;}
 
-/* 🟥 الهيدر */
-header {
-    background: rgba(0,0,0,0.85);
-    color: #fc0000;
-    padding: 15px;
-    text-align: center;
-    font-size: 26px;
-    font-weight: bold;
-    letter-spacing: 2px;
-    box-shadow: 0 0 10px #000;
-    text-shadow: 0 0 5px #fc0000;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
+/* زر القائمة */
+#menuToggle{
+    background:#f83a00; color:#fff; border:none; padding:10px 14px; cursor:pointer; border-radius:6px; transition:0.3s; font-weight:bold;
 }
-header a { color:#fc0000; text-decoration:none; transition:0.3s; }
-header a:hover { color:#f83a00; text-shadow:0 0 20px #f83a00,0 0 30px #ff4500; transform:scale(1.05); }
+#menuToggle:hover{background:#00eaff;color:#000;box-shadow:0 0 15px #0ff;}
 
-/* جدول الروابط */
-table {
-    background: rgba(0,0,0,0.75);
-    font-size: 20px;
-    border-collapse: collapse;
-    margin: 20px auto;
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 0 0 15px #000;
-    width: 95%;
+/* القائمة الجانبية */
+#sideMenu{
+  position:fixed; top:80px; right:-260px; width:260px; height:calc(100%-80px); 
+  background:rgba(0,0,0,0.95); box-shadow:-2px 0 15px #000; padding-top:20px; 
+  z-index:2000; transition:0.3s;
 }
-table th { padding: 15px 20px; border: 1px solid #333; border-radius:6px; transition:0.3s; }
-table th a { color: #f83a00; text-decoration: none; font-weight: bold; transition: transform 0.3s,color 0.3s,text-shadow 0.3s; }
-table th a:hover { transform: scale(1.2); color: #00eaff; text-shadow: 0 0 15px #00eaff, 0 0 25px #00ffff; }
+#sideMenu a{display:block;padding:15px 20px;color:#f83a00;text-decoration:none;font-size:18px;opacity:0.95;transition:0.3s;}
+#sideMenu a:hover{color:#00eaff;transform:scale(1.05);}
 
-/* الفيديوهات */
-section {
-    margin: 20px;
-    padding: 20px;
-    background: rgba(0,0,0,0.85);
-    border-radius: 12px;
-    box-shadow: 0 0 25px #111;
-    text-align: center;
-    position: relative;
-    overflow: hidden;
-}
-section h2 {
-    color: #f83a00;
-    margin-bottom: 20px;
-    font-family: "Georgia", serif;
-    animation: glow 1.5s infinite alternate;
-    text-transform: uppercase;
-    cursor: default;
-}
-@keyframes glow {
-    0% { text-shadow: 0 0 5px #f83a00; }
-    50% { text-shadow:0 0 15px #f83a00,0 0 20px #ff4500; }
-    100% { text-shadow:0 0 25px #f83a00,0 0 30px #ff8000; }
-}
-video {
-    width:100%;
-    border-radius:10px;
-    border:2px solid #f83a00;
-    box-shadow:0 0 25px #ff4500,0 0 50px #f83a00 inset;
-    max-width:100%;
-    transition: transform 0.3s, box-shadow 0.3s;
-    position: relative; z-index:1;
-}
-video::after {
-    content:'';
-    position:absolute; top:0; left:0;
-    width:100%; height:100%;
-    border-radius:10px;
-    background: linear-gradient(120deg, rgba(0,255,255,0.15), rgba(255,0,255,0.15));
-    mix-blend-mode: overlay;
-    pointer-events: none;
-    animation: holo 3s linear infinite;
-    z-index:2;
-}
-@keyframes holo {
-    0% { transform: translateX(0) translateY(0); }
-    50% { transform: translateX(5px) translateY(-5px); }
-    100% { transform: translateX(0) translateY(0); }
-}
+/* البحث */
+#searchBox{width:90%;max-width:500px;margin:120px auto 20px auto;display:flex;}
+#searchBox input[type=text]{flex:1;padding:12px;border-radius:8px 0 0 8px;border:none;font-size:16px;}
+#searchBox button{padding:12px 18px;border:none;border-radius:0 8px 8px 0;background:#f83a00;color:#fff;cursor:pointer;transition:0.3s;font-size:16px;}
+#searchBox button:hover{background:#00eaff;color:#000;}
 
-/* التعليقات */
-.comment-box { margin-top: 20px; text-align:center; }
-.comment-box input, .comment-box button { padding: 10px; margin: 5px; border-radius:6px; border:none; }
-.comment-box input { width:60%; }
-.comment-box button { background:#f83a00; color:#fff; cursor:pointer; transition:0.3s; }
-.comment-box button:hover { background:#00eaff; color:#000; }
-.comments-list {
-    margin-top:15px; max-height:200px; overflow-y:auto;
-    background: rgba(255,255,255,0.05); padding:10px; border-radius:8px;
-}
+/* محتوى الفيديوهات */
+section{margin:20px;padding:20px;background:rgba(0,0,0,0.85);border-radius:12px;box-shadow:0 0 25px #111;text-align:center;position:relative;overflow:hidden;}
+section h2{color:#f83a00;margin-bottom:20px;font-family:"Georgia", serif;animation:glow 1.5s infinite alternate;text-transform:uppercase;}
+@keyframes glow{0%{text-shadow:0 0 5px #f83a00;}50%{text-shadow:0 0 15px #f83a00,0 0 20px #ff4500;}100%{text-shadow:0 0 25px #f83a00,0 0 30px #ff8000;}}
+video{width:100%;border-radius:10px;border:2px solid #f83a00;box-shadow:0 0 25px #ff4500,0 0 50px #f83a00 inset;max-width:100%;transition: transform 0.3s, box-shadow 0.3s;position: relative; z-index:1;}
+video::after{content:'';position:absolute;top:0;left:0;width:100%;height:100%;border-radius:10px;background:linear-gradient(120deg, rgba(0,255,255,0.15), rgba(255,0,255,0.15));mix-blend-mode:overlay;pointer-events:none;animation:holo 3s linear infinite;z-index:2;}
+@keyframes holo{0%{transform:translateX(0) translateY(0);}50%{transform:translateX(5px) translateY(-5px);}100%{transform:translateX(0) translateY(0);}}
 
 /* إشعار */
-#notify { position:fixed; bottom:20px; right:20px; background:#f83a00; color:#fff; padding:12px 20px; border-radius:10px; box-shadow:0 0 20px #000; display:none; font-weight:bold; z-index:1000; cursor:pointer; }
+#notify{position:fixed;bottom:20px;right:20px;background:#f83a00;color:#fff;padding:12px 20px;border-radius:10px;box-shadow:0 0 20px #000;display:none;font-weight:bold;z-index:1000;cursor:pointer;}
 
-/* الهواتف */
 @media(max-width:768px){
-    header{font-size:22px;}
-    table th{padding:12px 5px;font-size:14px;}
-    section h2{font-size:20px;}
-    video{max-width:100%;height:auto;}
-    .comment-box input{width:55%;}
+header{flex-direction:column;height:auto;padding:10px;}
+#sideMenu{width:70%;}
+#searchBox{margin-top:150px;}
+section h2{font-size:20px;}
+video{max-width:100%;height:auto;}
+#timeCalendarWrapper{margin-top:10px;}
 }
-
-footer{
-    text-align:center;
-    padding:15px;
-    font-size:14px;
-    color:#f83a00;
-    margin-top:20px;
-}
+footer{text-align:center;padding:15px;font-size:14px;color:#f83a00;margin-top:20px;}
 </style>
 </head>
 <body>
 
+<!-- التحقق من التسجيل -->
 <script>
-// إذا المستخدم ما سجلش، يروح مباشرة ل signup.html
 if(!localStorage.getItem('signedUp')){
     window.location.href = 'signup.html';
 }
@@ -171,42 +123,53 @@ if(!localStorage.getItem('signedUp')){
 <div class="cloud"></div>
 
 <header>
-    <a href="#">Fun X – إصدار 1.1</a>    
+<div id="siteName">Fun X – إصدار 1.5</div>
+<div id="timeCalendarWrapper">
+    <div id="timeCalendar">
+        <div id="clock"></div>
+        <div id="calendar"></div>
+    </div>
+</div>
+<button id="menuToggle">☰ القائمة</button>
 </header>
 
-<table>
-<tr>
-<th><a href="game.html">🎮 Game War</a></th>
-<th><a href="من سيربح المليون.html">❓ Game Question</a></th>
-<th><a href="music.html">🕋quran🕋</a></th>
-<th><a href="https://kbdalnby180-commits.github.io/crash-plane/">🛫plan X🛫</a></th>
-<th><a href="star.html">💖تقييمك لي💖</a></th>
-<th><a href="info.html">💖معلومات عن الموقع💖</a></th>
-</tr>
-</table>
+<div id="sideMenu">
+<a href="game.html">🎮 Game War</a>
+<a href="من سيربح المليون.html">❓ Game Question</a>
+<a href="music.html">🕋 Quran 🕋</a>
+<a href="https://kbdalnby180-commits.github.io/crash-plane/">🛫 Plan X 🛫</a>
+<a href="gogo.html">لعبة الصراحه والجرأة</a>
+<a href="look.html">📱 لعبة إخفاء الهاتف</a>
+<a href="art.html">رسم</a>
+<a href="bord.html">🎴 لعبة الورق المتشابه</a>
+<a href="challenges.html">🔥 لعبة التحديات 🔥</a>
+<a href="day.html">السبحة الإلكترونية</a>
+<a href="study.html">📖 مساعد المذاكرة</a>
+<a href="tips.html">💡 نصيحة يومية</a>
+<a href="X&O.html">لعبة X&O</a>
+<a href="info.html">💖 معلومات عن الموقع 💖</a>
+</div>
+
+<form id="searchBox" action="https://www.google.com/search" method="GET" target="_blank">
+<input type="text" name="q" placeholder="ابحث في جوجل">
+<button type="submit">🔍</button>
+</form>
 
 <section>
 <h2>فيديوهات اليوم – Welcome</h2>
 <video id="mainVideo" controls>
 <source src="VID-20250315-WA0059.mp4" type="video/mp4">
 </video>
-
-<div class="comment-box">
-<input type="text" id="commentInput" placeholder="اكتب تعليقك هنا">
-<button onclick="addComment()">أرسل التعليق</button>
-<div class="comments-list" id="commentsList"></div>
-</div>
 </section>
 
 <div id="notify">🎉 تم إصدار تحديث جديد! اضغط هنا لمشاهدة التفاصيل</div>
-
 <audio id="bgMusic" src="sounds/Awkward_Apocalyptic_Pickup.mp3" loop autoplay></audio>
 <audio id="clickSound" src="sounds/mixkit-select-click-1109.wav"></audio>
 
 <footer>📝 جميع الحقوق محفوظة © 2025 Fun X 🎉</footer>
 
 <script>
-// 🌟 النجوم
+// النجوم
 for(let i=0;i<100;i++){
     const star=document.createElement('div');
     star.className='star';
@@ -216,22 +179,22 @@ for(let i=0;i<100;i++){
     document.body.appendChild(star);
 }
 
-// حركة القمر/الشمس حسب الوقت
-const celestial = document.getElementById('celestial');
+// القمر والشمس تلقائي
+const celestial=document.getElementById('celestial');
 function updateCelestial(){
-    const now = new Date();
-    const hour = now.getHours() + now.getMinutes()/60;
-    const percent = hour/24;
-    celestial.style.top = `${10 + percent*60}%`;
-    celestial.style.left = `${10 + percent*80}%`;
+    const now=new Date();
+    const hour=now.getHours()+now.getMinutes()/60;
+    const percent=hour/24;
+    celestial.style.top=`${10 + percent*60}%`;
+    celestial.style.left=`${10 + percent*80}%`;
     if(hour>=6 && hour<18){
-        document.body.style.background = "linear-gradient(180deg,#87CEEB,#FFD700)";
-        celestial.style.background = "radial-gradient(circle,#FFD700,#FFA500)";
+        document.body.style.background="linear-gradient(180deg,#87CEEB,#FFD700)";
+        celestial.style.background="radial-gradient(circle,#FFD700,#FFA500)";
         celestial.style.boxShadow="0 0 50px #FFD700";
         document.querySelectorAll('.star').forEach(s=>s.style.opacity=0);
     } else {
-        document.body.style.background = "#000";
-        celestial.style.background = "radial-gradient(circle,#fff,#ccc)";
+        document.body.style.background="#000";
+        celestial.style.background="radial-gradient(circle,#fff,#ccc)";
         celestial.style.boxShadow="0 0 30px #fff";
         document.querySelectorAll('.star').forEach(s=>s.style.opacity=Math.random());
     }
@@ -239,52 +202,69 @@ function updateCelestial(){
 setInterval(updateCelestial,1000);
 updateCelestial();
 
-// التعليقات
-function addComment(){
-    const input=document.getElementById('commentInput');
-    if(input.value.trim()==="") return;
-    const list=document.getElementById('commentsList');
-    const div=document.createElement('div');
-    div.innerText=input.value;
-    list.appendChild(div);
-    input.value="";
-}
-
-// إشعار التحديث
-const notify = document.getElementById('notify');
+// إشعار مرة واحدة
+const notify=document.getElementById('notify');
 if(!localStorage.getItem('updateSeen')){
-    notify.style.display = 'block';
-    notify.onclick = () => {
+    notify.style.display='block';
+    notify.onclick=()=>{
         document.getElementById('clickSound').play();
         localStorage.setItem('updateSeen','true');
-        window.location.href = 'notifications.html';
+        window.location.href='notifications.html';
     };
-} else {
-    notify.style.display = 'none';
-}
+} else { notify.style.display='none'; }
 
-// الصوت الخلفي هادي ومستمر
-const bgMusic = document.getElementById('bgMusic');
-bgMusic.volume = 1.0;
-bgMusic.play().catch(() => {
-    document.addEventListener('click', () => bgMusic.play(), { once: true });
-});
+// bgMusic
+const bgMusic=document.getElementById('bgMusic');
+bgMusic.volume=1.0;
+bgMusic.play().catch(()=>{ document.addEventListener('click',()=>bgMusic.play(),{once:true}); });
 
-// صوت التأثيرات عند أي نقرة
-function playEffectSound() {
-    const click = document.getElementById('clickSound');
-    click.currentTime = 0;
+// تأثير النقر
+function playEffectSound(){
+    const click=document.getElementById('clickSound');
+    click.currentTime=0;
     click.play();
 }
-document.body.addEventListener('click', playEffectSound);
+document.body.addEventListener('click',playEffectSound);
 
-// إيقاف bgMusic عند تشغيل الفيديو وإعادة التشغيل بعده
-const mainVideo = document.getElementById('mainVideo');
-mainVideo.addEventListener('play', () => { bgMusic.pause(); });
-mainVideo.addEventListener('pause', () => { if(!mainVideo.ended) bgMusic.play(); });
-mainVideo.addEventListener('ended', () => { bgMusic.play(); });
+// إيقاف bgMusic عند تشغيل الفيديو
+const mainVideo=document.getElementById('mainVideo');
+mainVideo.addEventListener('play',()=>{ bgMusic.pause(); });
+mainVideo.addEventListener('pause',()=>{ if(!mainVideo.ended) bgMusic.play(); });
+mainVideo.addEventListener('ended',()=>{ bgMusic.play(); });
 
+// الساعة والتقويم
+function updateClock(){
+    const now=new Date();
+    const clock=document.getElementById('clock');
+    const calendar=document.getElementById('calendar');
+
+    const h=now.getHours().toString().padStart(2,'0');
+    const m=now.getMinutes().toString().padStart(2,'0');
+    const s=now.getSeconds().toString().padStart(2,'0');
+    clock.innerHTML=`${h}:${m}:${s}`;
+
+    const day=now.getDate().toString().padStart(2,'0');
+    const month=(now.getMonth()+1).toString().padStart(2,'0');
+    const year=now.getFullYear();
+    calendar.innerHTML=`${day}/${month}/${year}`;
+}
+setInterval(updateClock,1000);
+updateClock();
+
+// فتح/اغلاق القائمة
+const menuToggle=document.getElementById('menuToggle');
+const sideMenu=document.getElementById('sideMenu');
+let menuOpen=false;
+menuToggle.addEventListener('click',()=>{
+    if(menuOpen){
+        sideMenu.style.right='-260px';
+        menuOpen=false;
+    }else{
+        sideMenu.style.right='0';
+        menuOpen=true;
+    }
+});
 </script>
+
 </body>
 </html>
-
