--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Fun X – إصدار 1.5</title>
+
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:"Georgia", serif;}
 body{overflow-x:hidden;color:#fff;transition:background 1s;}
@@ -14,108 +15,84 @@ body{overflow-x:hidden;color:#fff;transition:background 1s;}
 @keyframes twinkle{0%,100%{opacity:0.2;}50%{opacity:1;}}
 
 /* القمر والشمس */
-.celestial{position:fixed;width:100px;height:100px;border-radius:50%;box-shadow:0 0 30px #fff;z-index:-2;transition:all 1s linear;}
+.celestial{position:fixed;width:80px;height:80px;border-radius:50%;box-shadow:0 0 30px #fff;z-index:-2;transition:all 1s linear;}
 
 /* الغيوم */
-.cloud{position:fixed;width:300px;height:80px;background:rgba(255,255,255,0.05);border-radius:50%;animation:cloudMove 120s linear infinite;z-index:-1;}
-.cloud:nth-child(2){top:50%;width:500px;height:100px;animation-duration:200s;}
+.cloud{position:fixed;width:200px;height:60px;background:rgba(255,255,255,0.05);border-radius:50%;animation:cloudMove 120s linear infinite;z-index:-1;}
+.cloud:nth-child(2){top:50%;width:400px;height:90px;animation-duration:200s;}
 @keyframes cloudMove{0%{left:-500px;}100%{left:100%;}}
 
 /* الهيدر */
 header{
-  position:fixed; top:0; width:100%; height:80px; display:flex; align-items:center; justify-content:space-between;
-  background:rgba(0,0,0,0.85); color:#fc0000; padding:0 30px; z-index:1000; box-shadow:0 0 20px #000;
-  backdrop-filter: blur(8px);
-  border-bottom: 2px solid rgba(255,255,255,0.2);
+  position:fixed; top:0; width:100%; height:70px; display:flex; align-items:center; justify-content:space-between;
+  background:rgba(0,0,0,0.85); color:#fc0000; padding:0 15px; z-index:1000; box-shadow:0 0 15px #000;
+  backdrop-filter: blur(6px);
 }
 
-/* اسم الموقع */
+/* اسم الموقع مع اللوجو */
+#siteLogoName{
+    display:flex; align-items:center; gap:10px;
+}
+#siteLogo{
+    width:36px; height:36px; object-fit:contain; border-radius:6px; box-shadow:0 0 8px #f83a00;
+}
 #siteName{
-  font-size:28px;
-  font-weight:bold;
-  text-shadow:0 0 10px #f83a00, 0 0 20px #ff4500;
-  letter-spacing:1px;
+  font-size:22px; font-weight:bold; text-shadow:0 0 6px #f83a00, 0 0 12px #ff4500;
 }
 
-/* الوقت والتقويم */
+/* الوقت والتاريخ */
 #timeCalendarWrapper{
-  display:flex;
-  flex-direction:column;
-  align-items:flex-end;
-  background: rgba(0,0,0,0.4);
-  padding:10px 16px;
-  border-radius:14px;
-  box-shadow: 0 0 20px #0ff inset, 0 0 40px #0ff;
-  animation: glowClock 2s ease-in-out infinite alternate;
+  display:flex; flex-direction:column; align-items:flex-end;
+  background: rgba(0,0,0,0.4); padding:6px 12px;
+  border-radius:10px; box-shadow: 0 0 12px #0ff inset, 0 0 25px #0ff;
 }
-@keyframes glowClock{
-  0%{box-shadow: 0 0 20px #0ff inset, 0 0 40px #0ff;}
-  50%{box-shadow: 0 0 30px #0ff inset, 0 0 60px #0ff;}
-  100%{box-shadow: 0 0 20px #0ff inset, 0 0 40px #0ff;}
-}
-#timeCalendar{
-  display:flex;
-  flex-direction:column;
-  align-items:flex-end;
-  font-family:'Courier New', Courier, monospace;
-  color:#0ff;
-  text-shadow: 0 0 15px #0ff, 0 0 30px #0ff, 0 0 40px #00ffff;
-  letter-spacing:2px;
-}
-#clock{font-size:36px;font-weight:bold;}
-#calendar{font-size:20px;font-weight:bold;color:#0ff;text-shadow:0 0 10px #0ff,0 0 20px #0ff;}
+#timeCalendar{display:flex; flex-direction:column; align-items:flex-end; font-family:'Courier New', monospace; color:#0ff;}
+#clock{font-size:22px;font-weight:bold;}
+#calendar{font-size:16px;font-weight:bold;}
 
 /* زر القائمة */
 #menuToggle{
-    background:#f83a00; color:#fff; border:none; padding:10px 14px; cursor:pointer; border-radius:6px; transition:0.3s; font-weight:bold;
+    background:#f83a00; color:#fff; border:none; padding:8px 12px; cursor:pointer; border-radius:6px;
+    font-weight:bold; font-size:16px;
 }
-#menuToggle:hover{background:#00eaff;color:#000;box-shadow:0 0 15px #0ff;}
+#menuToggle:hover{background:#00eaff;color:#000;}
 
 /* القائمة الجانبية */
 #sideMenu{
-  position:fixed; top:80px; right:-260px; width:260px; height:calc(100%-80px); 
+  position:fixed; top:70px; right:-100%; width:80%; max-width:300px; height:100%; 
   background:rgba(0,0,0,0.95); box-shadow:-2px 0 15px #000; padding-top:20px; 
-  z-index:2000; transition:0.3s;
+  z-index:2000; transition:0.4s;
 }
-#sideMenu a{display:block;padding:15px 20px;color:#f83a00;text-decoration:none;font-size:18px;opacity:0.95;transition:0.3s;}
-#sideMenu a:hover{color:#00eaff;transform:scale(1.05);}
+#sideMenu a{display:block;padding:14px 18px;color:#f83a00;text-decoration:none;font-size:18px;}
+#sideMenu a:hover{color:#00eaff;transform:translateX(-4px);}
 
 /* البحث */
-#searchBox{width:90%;max-width:500px;margin:120px auto 20px auto;display:flex;}
-#searchBox input[type=text]{flex:1;padding:12px;border-radius:8px 0 0 8px;border:none;font-size:16px;}
-#searchBox button{padding:12px 18px;border:none;border-radius:0 8px 8px 0;background:#f83a00;color:#fff;cursor:pointer;transition:0.3s;font-size:16px;}
-#searchBox button:hover{background:#00eaff;color:#000;}
+#searchBox{width:90%;max-width:450px;margin:90px auto 20px auto;display:flex;}
+#searchBox input[type=text]{flex:1;padding:10px;border-radius:8px 0 0 8px;border:none;font-size:14px;}
+#searchBox button{padding:10px 16px;border:none;border-radius:0 8px 8px 0;background:#f83a00;color:#fff;cursor:pointer;}
 
-/* محتوى الفيديوهات */
-section{margin:20px;padding:20px;background:rgba(0,0,0,0.85);border-radius:12px;box-shadow:0 0 25px #111;text-align:center;position:relative;overflow:hidden;}
-section h2{color:#f83a00;margin-bottom:20px;font-family:"Georgia", serif;animation:glow 1.5s infinite alternate;text-transform:uppercase;}
-@keyframes glow{0%{text-shadow:0 0 5px #f83a00;}50%{text-shadow:0 0 15px #f83a00,0 0 20px #ff4500;}100%{text-shadow:0 0 25px #f83a00,0 0 30px #ff8000;}}
-video{width:100%;border-radius:10px;border:2px solid #f83a00;box-shadow:0 0 25px #ff4500,0 0 50px #f83a00 inset;max-width:100%;transition: transform 0.3s, box-shadow 0.3s;position: relative; z-index:1;}
-video::after{content:'';position:absolute;top:0;left:0;width:100%;height:100%;border-radius:10px;background:linear-gradient(120deg, rgba(0,255,255,0.15), rgba(255,0,255,0.15));mix-blend-mode:overlay;pointer-events:none;animation:holo 3s linear infinite;z-index:2;}
-@keyframes holo{0%{transform:translateX(0) translateY(0);}50%{transform:translateX(5px) translateY(-5px);}100%{transform:translateX(0) translateY(0);}}
+/* الفيديو */
+section{margin:20px;padding:15px;background:rgba(0,0,0,0.85);border-radius:12px;text-align:center;}
+section h2{color:#f83a00;margin-bottom:12px;font-size:20px;}
+video{width:100%;border-radius:10px;max-width:100%;}
 
-/* إشعار */
-#notify{position:fixed;bottom:20px;right:20px;background:#f83a00;color:#fff;padding:12px 20px;border-radius:10px;box-shadow:0 0 20px #000;display:none;font-weight:bold;z-index:1000;cursor:pointer;}
+/* الإشعار */
+#notify{position:fixed;bottom:20px;right:20px;background:#f83a00;color:#fff;padding:10px 16px;border-radius:10px;display:none;z-index:1000;cursor:pointer;font-size:14px;}
 
+/* تهيئة للهاتف */
 @media(max-width:768px){
-header{flex-direction:column;height:auto;padding:10px;}
-#sideMenu{width:70%;}
-#searchBox{margin-top:150px;}
-section h2{font-size:20px;}
-video{max-width:100%;height:auto;}
-#timeCalendarWrapper{margin-top:10px;}
+  header{flex-direction:row;height:70px;padding:0 10px;}
+  #siteName{font-size:18px;}
+  #clock{font-size:18px;}
+  #calendar{font-size:14px;}
+  #sideMenu{width:100%;max-width:none;}
+  section h2{font-size:18px;}
+  video{height:auto;}
 }
-footer{text-align:center;padding:15px;font-size:14px;color:#f83a00;margin-top:20px;}
+footer{text-align:center;padding:10px;font-size:12px;color:#f83a00;}
 </style>
 </head>
 <body>
-
-<!-- التحقق من التسجيل -->
-<script>
-if(!localStorage.getItem('signedUp')){
-    window.location.href = 'signup.html';
-}
-</script>
 
 <div class="stars"></div>
 <div class="celestial" id="celestial"></div>
@@ -123,31 +100,27 @@ if(!localStorage.getItem('signedUp')){
 <div class="cloud"></div>
 
 <header>
-<div id="siteName">Fun X – إصدار 1.5</div>
+<div id="siteLogoName">
+    <img src="IMG-20250325-WA0003.jpg" alt="شعار الموقع" id="siteLogo">
+    <span id="siteName">Fun X – إصدار 1.5</span>
+</div>
 <div id="timeCalendarWrapper">
     <div id="timeCalendar">
         <div id="clock"></div>
         <div id="calendar"></div>
     </div>
 </div>
-<button id="menuToggle">☰ القائمة</button>
+<button id="menuToggle">☰</button>
 </header>
 
 <div id="sideMenu">
 <a href="game.html">🎮 Game War</a>
-<a href="من سيربح المليون.html">❓ Game Question</a>
 <a href="music.html">🕋 Quran 🕋</a>
-<a href="https://kbdalnby180-commits.github.io/crash-plane/">🛫 Plan X 🛫</a>
-<a href="gogo.html">لعبة الصراحه والجرأة</a>
-<a href="look.html">📱 لعبة إخفاء الهاتف</a>
-<a href="art.html">رسم</a>
-<a href="bord.html">🎴 لعبة الورق المتشابه</a>
-<a href="challenges.html">🔥 لعبة التحديات 🔥</a>
-<a href="day.html">السبحة الإلكترونية</a>
+<a href="look.html">📱 إخفاء الهاتف</a>
+<a href="art.html">🎨 رسم</a>
 <a href="study.html">📖 مساعد المذاكرة</a>
 <a href="tips.html">💡 نصيحة يومية</a>
-<a href="X&O.html">لعبة X&O</a>
-<a href="info.html">💖 معلومات عن الموقع 💖</a>
+<a href="info.html">ℹ️ عن الموقع</a>
 </div>
 
 <form id="searchBox" action="https://www.google.com/search" method="GET" target="_blank">
@@ -156,21 +129,19 @@ if(!localStorage.getItem('signedUp')){
 </form>
 
 <section>
-<h2>فيديوهات اليوم – Welcome</h2>
+<h2>📺 فيديو اليوم</h2>
 <video id="mainVideo" controls>
 <source src="VID-20250315-WA0059.mp4" type="video/mp4">
 </video>
 </section>
 
-<div id="notify">🎉 تم إصدار تحديث جديد! اضغط هنا لمشاهدة التفاصيل</div>
-<audio id="bgMusic" src="sounds/Awkward_Apocalyptic_Pickup.mp3" loop autoplay></audio>
-<audio id="clickSound" src="sounds/mixkit-select-click-1109.wav"></audio>
+<div id="notify">✨ تحديث جديد متاح! اضغط هنا</div>
 
 <footer>📝 جميع الحقوق محفوظة © 2025 Fun X 🎉</footer>
 
 <script>
-// النجوم
-for(let i=0;i<100;i++){
+// نجوم
+for(let i=0;i<60;i++){
     const star=document.createElement('div');
     star.className='star';
     star.style.top=Math.random()*100+'%';
@@ -179,24 +150,17 @@ for(let i=0;i<100;i++){
     document.body.appendChild(star);
 }
 
-// القمر والشمس تلقائي
+// قمر/شمس
 const celestial=document.getElementById('celestial');
 function updateCelestial(){
     const now=new Date();
-    const hour=now.getHours()+now.getMinutes()/60;
-    const percent=hour/24;
-    celestial.style.top=`${10 + percent*60}%`;
-    celestial.style.left=`${10 + percent*80}%`;
-    if(hour>=6 && hour<18){
+    const h=now.getHours();
+    if(h>=6 && h<18){
         document.body.style.background="linear-gradient(180deg,#87CEEB,#FFD700)";
         celestial.style.background="radial-gradient(circle,#FFD700,#FFA500)";
-        celestial.style.boxShadow="0 0 50px #FFD700";
-        document.querySelectorAll('.star').forEach(s=>s.style.opacity=0);
     } else {
         document.body.style.background="#000";
         celestial.style.background="radial-gradient(circle,#fff,#ccc)";
-        celestial.style.boxShadow="0 0 30px #fff";
-        document.querySelectorAll('.star').forEach(s=>s.style.opacity=Math.random());
     }
 }
 setInterval(updateCelestial,1000);
@@ -207,64 +171,33 @@ const notify=document.getElementById('notify');
 if(!localStorage.getItem('updateSeen')){
     notify.style.display='block';
     notify.onclick=()=>{
-        document.getElementById('clickSound').play();
         localStorage.setItem('updateSeen','true');
-        window.location.href='notifications.html';
+        alert("📢 تفاصيل التحديث 1.5: تحسينات للهاتف والكمبيوتر!");
     };
-} else { notify.style.display='none'; }
-
-// bgMusic
-const bgMusic=document.getElementById('bgMusic');
-bgMusic.volume=1.0;
-bgMusic.play().catch(()=>{ document.addEventListener('click',()=>bgMusic.play(),{once:true}); });
-
-// تأثير النقر
-function playEffectSound(){
-    const click=document.getElementById('clickSound');
-    click.currentTime=0;
-    click.play();
 }
-document.body.addEventListener('click',playEffectSound);
 
-// إيقاف bgMusic عند تشغيل الفيديو
-const mainVideo=document.getElementById('mainVideo');
-mainVideo.addEventListener('play',()=>{ bgMusic.pause(); });
-mainVideo.addEventListener('pause',()=>{ if(!mainVideo.ended) bgMusic.play(); });
-mainVideo.addEventListener('ended',()=>{ bgMusic.play(); });
-
-// الساعة والتقويم
+// ساعة
 function updateClock(){
     const now=new Date();
-    const clock=document.getElementById('clock');
-    const calendar=document.getElementById('calendar');
-
-    const h=now.getHours().toString().padStart(2,'0');
-    const m=now.getMinutes().toString().padStart(2,'0');
-    const s=now.getSeconds().toString().padStart(2,'0');
-    clock.innerHTML=`${h}:${m}:${s}`;
-
-    const day=now.getDate().toString().padStart(2,'0');
-    const month=(now.getMonth()+1).toString().padStart(2,'0');
-    const year=now.getFullYear();
-    calendar.innerHTML=`${day}/${month}/${year}`;
+    document.getElementById('clock').textContent=
+        now.getHours().toString().padStart(2,'0')+":"+
+        now.getMinutes().toString().padStart(2,'0')+":"+
+        now.getSeconds().toString().padStart(2,'0');
+    document.getElementById('calendar').textContent=
+        now.getDate().toString().padStart(2,'0')+"/"+
+        (now.getMonth()+1).toString().padStart(2,'0')+"/"+now.getFullYear();
 }
 setInterval(updateClock,1000);
 updateClock();
 
-// فتح/اغلاق القائمة
+// القائمة
 const menuToggle=document.getElementById('menuToggle');
 const sideMenu=document.getElementById('sideMenu');
 let menuOpen=false;
 menuToggle.addEventListener('click',()=>{
-    if(menuOpen){
-        sideMenu.style.right='-260px';
-        menuOpen=false;
-    }else{
-        sideMenu.style.right='0';
-        menuOpen=true;
-    }
+    sideMenu.style.right=menuOpen?'-100%':'0';
+    menuOpen=!menuOpen;
 });
 </script>
-
 </body>
 </html>
