--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ header{
 #sideMenu{
   position:fixed; top:70px; right:-100%; width:80%; max-width:300px; height:100%; 
   background:rgba(0,0,0,0.95); box-shadow:-2px 0 15px #000; padding-top:20px; 
-  z-index:2000; transition:0.4s;
+  z-index:2000; transition:0.4s; 
+  overflow-y:auto; /* ✅ إضافة الاسكورل */
 }
 #sideMenu a{display:block;padding:14px 18px;color:#f83a00;text-decoration:none;font-size:18px;}
 #sideMenu a:hover{color:#00eaff;transform:translateX(-4px);}
