--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ footer{text-align:center;padding:10px;font-size:12px;color:#f83a00;}
 <a href="tips.html">💡 نصيحة يومية</a>
 <a href="X&O.html">❌⭕ لعبة X&O</a>
 <a href="info.html">💖 معلومات عن الموقع 💖</a>
+<a href="trading/tadawol.html.html">لعبة التداول💰</a>
 </div>
 
 <form id="searchBox" action="https://www.google.com/search" method="GET" target="_blank">
@@ -209,4 +210,5 @@ menuToggle.addEventListener('click',()=>{
 </script>
 </body>
 </html>
+
 
