--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <header>
   <div id="siteLogoName">
-    <img src="images\file_0000000059a062309109771ec07a4d2a-01.jpeg" alt="شعار الموقع" id="siteLogo">
+    <img src="images/file_0000000059a062309109771ec07a4d2a-01.jpeg" alt="شعار الموقع" id="siteLogo">
     <span id="siteName">Fun X – إصدار 1.2</span>
   </div>
   <div id="timeCalendarWrapper">
@@ -28,23 +28,23 @@
 </header>
 
 <div id="sideMenu">
-  <a href="wep game\game war\index.html">🎮 Game War</a>
-  <a href="wep game\Who will win the million\index.html">❓ Game Question</a>
-  <a href="wep game\crash\CRASH.html">🛫 Plan X 🛫</a>
-  <a href="wep game\Trade\index.html">تداول💰</a>
-  <a href="wep game\Truth or Dare\index.html">🎲 لعبة الصراحة والجرأة</a>
-  <a href="wep game\Hide phone game\index.html">📱 لعبة إخفاء الهاتف</a>
-  <a href="wep game\X&O game\index.html">❌⭕ لعبة X&O</a>
-  <a href="wep game\Matching card game\index.html">🎴 لعبة الورق المتشابه</a>
-  <a href="wep game\Challenges game\index.html">🔥 لعبة التحديات 🔥</a>
-  <a href="wep app\paints\index.html">🎨 رسم</a>
-  <a href="wep app\quran\index.html">🕋 Quran 🕋</a>
-  <a href="wep app\Electronic rosary\index.html">📿 السبحة الإلكترونية</a>
-  <a href="wep app\Study assistant\index.html">📖 مساعد المذاكرة</a>
-  <a href="wep app\daily-tip\index.html">💡 نصيحة يومية</a>
-  <a href="wep app\qr\index.html">صنع qr</a>
-  <a href="tool\Fun X\index.html">💖 معلومات عن الموقع 💖</a>
-  <a href="tool\update.html">تحديثات 1.2💖</a>
+  <a href="wep game/game war/index.html">🎮 Game War</a>
+  <a href="wep game/Who will win the million/index.html">❓ Game Question</a>
+  <a href="wep game/crash/CRASH.html">🛫 Plan X 🛫</a>
+  <a href="wep game/Trade/index.html">تداول💰</a>
+  <a href="wep game/Truth or Dare/index.html">🎲 لعبة الصراحة والجرأة</a>
+  <a href="wep game/Hide phone game/index.html">📱 لعبة إخفاء الهاتف</a>
+  <a href="wep game/X&O game/index.html">❌⭕ لعبة X&O</a>
+  <a href="wep game/Matching card game/index.html">🎴 لعبة الورق المتشابه</a>
+  <a href="wep game/Challenges game/index.html">🔥 لعبة التحديات 🔥</a>
+  <a href="wep app/paints/index.html">🎨 رسم</a>
+  <a href="wep app/quran/index.html">🕋 Quran 🕋</a>
+  <a href="wep app/Electronic rosary/index.html">📿 السبحة الإلكترونية</a>
+  <a href="wep app/Study assistant/index.html">📖 مساعد المذاكرة</a>
+  <a href="wep app/daily-tip/index.html">💡 نصيحة يومية</a>
+  <a href="wep app/qr/index.html">صنع qr</a>
+  <a href="tool/Fun X/index.html">💖 معلومات عن الموقع 💖</a>
+  <a href="tool/update.html">تحديثات 1.2💖</a>
 </div>
 
 <form id="searchBox" action="https://www.google.com/search" method="GET" target="_blank">
@@ -54,13 +54,30 @@
 
 <section>
   <h2>📺 فيديو اليوم</h2>
-  <video id="mainVideo" controls>
+  <video controls>
     <source src="video/9f8747249d88b912e98910c3f76010e8_1756070892507.mp4" type="video/mp4">
+  </video>
+  <br>
+  <video controls>
+    <source src="video/76ea18da1ab43504f23e651c84e1cc67_1754760544477.mp4" type="video/mp4">
   </video>
 </section>
 
+<!-- إشعار -->
 <div id="notify">✨ تحديث جديد متاح! اضغط هنا</div>
+
+<!-- الروبوت -->
+<button id="chatToggle">🤖</button>
+<div id="chatbot" class="hidden">
+  <div id="chatMessages"></div>
+  <div id="chatInputWrapper">
+    <input type="text" id="chatInput" placeholder="اكتب رسالتك...">
+    <button id="sendBtn">➡️</button>
+  </div>
+</div>
+
 <footer>📝 جميع الحقوق محفوظة © 2025 Fun X 🎉</footer>
+
 <script src="script.js"></script>
 </body>
 </html>
