--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <a href="wep app/qr/index.html">صنع qr</a>
   <a href="tool/Fun X/index.html">💖 معلومات عن الموقع 💖</a>
   <a href="tool/update.html">تحديثات 1.2💖</a>
-  <a href="https://f8c86c9d-4933-4446-9f4f-3c9080c99876-00-1ooidvufari90.riker.replit.dev/">تسجيل دخول🙎‍♂️</a>
+  <a href="https://82fa57e2-9a07-41bd-a869-86ae336863dc-00-2861nct653a21.picard.replit.dev/">تسجيل دخول🙎‍♂️</a>
 </div>
 
 <form id="searchBox" action="https://www.google.com/search" method="GET" target="_blank">
@@ -80,6 +80,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
