--- a/index.html
+++ b/index.html
@@ -1,165 +1,57 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
-
+<html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🚧 الموقع تحت الصيانة 🚧</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Cairo", sans-serif;
-    }
-
-    body {
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      overflow: hidden;
-      color: #fff;
-      background: linear-gradient(270deg, #0f0c29, #302b63, #24243e);
-      background-size: 600% 600%;
-      animation: gradientBG 15s ease infinite;
-    }
-
-    @keyframes gradientBG {
-      0% {
-        background-position: 0% 50%;
-      }
-
-      50% {
-        background-position: 100% 50%;
-      }
-
-      100% {
-        background-position: 0% 50%;
-      }
-    }
-
-    .box {
-      background: rgba(0, 0, 0, 0.6);
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 0 25px rgba(0, 0, 0, 0.8), 0 0 40px #f83a00 inset;
-    }
-
-    h1 {
-      font-size: 42px;
-      margin-bottom: 20px;
-      color: #ff3c00;
-      text-shadow: 0 0 15px #ff3c00, 0 0 30px #ff7b00;
-    }
-
-    p {
-      font-size: 22px;
-      margin-bottom: 25px;
-      line-height: 1.8;
-      color: #0ff;
-      font-weight: bold;
-    }
-
-    .emoji {
-      font-size: 60px;
-      display: inline-block;
-      animation: sideMove 3s ease-in-out infinite;
-    }
-
-    @keyframes sideMove {
-      0% {
-        transform: translateX(0);
-      }
-
-      50% {
-        transform: translateX(30px);
-      }
-
-      100% {
-        transform: translateX(0);
-      }
-    }
-
-    #countdown {
-      font-size: 26px;
-      font-weight: bold;
-      color: #ffeb3b;
-      text-shadow: 0 0 12px #ffeb3b, 0 0 20px #ff9800;
-      margin: 20px 0;
-    }
-
-    footer {
-      margin-top: 20px;
-      font-size: 14px;
-      color: #ccc;
-    }
-
-    @media(max-width:700px) {
-      h1 {
-        font-size: 28px;
-      }
-
-      p {
-        font-size: 18px;
-      }
-
-      .emoji {
-        font-size: 50px;
-      }
-
-      #countdown {
-        font-size: 20px;
-      }
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Fun X</title>
+<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <div class="box">
-    <div class="emoji">📡</div>
-    <h1>🚧 الموقع تحت الصيانة 🚧</h1>
-    <p>نقوم حالياً بإجراء تحديثات وتحسينات<br>لتقديم تجربة أفضل لك.<br>شكراً لصبرك ❤️</p>
-    <div id="countdown">جارٍ التحميل...</div>
-    <div class="emoji">🛠️</div>
-    <footer>© 2025 جميع الحقوق محفوظة</footer>
+
+<div class="stars"></div>
+<div class="celestial" id="celestial"></div>
+<div class="cloud"></div>
+<div class="cloud"></div>
+
+<header>
+  <div id="siteLogoName">
+    <img src="images/file_0000000059a062309109771ec07a4d2a-01.jpeg" alt="شعار الموقع" id="siteLogo">
+    <span id="siteName">Fun X – إصدار 1.2</span>
   </div>
+  <div id="timeCalendarWrapper">
+    <div id="timeCalendar">
+      <div id="clock"></div>
+      <div id="calendar"></div>
+    </div>
+  </div>
+</header>
 
-  <script>
-    // مدة المؤقت = ساعتين (7200 ثانية)
-    const duration = 2 * 60 * 60 * 1000;
+<form id="searchBox" action="https://www.google.com/search" method="GET" target="_blank">
+  <input type="text" name="q" placeholder="ابحث في جوجل">
+  <button type="submit">🔍</button>
+</form>
 
-    // التحقق هل في وقت انتهاء محفوظ
-    let endTime = localStorage.getItem("maintenanceEndTime");
+<section>
+  <h2>📺 فيديو اليوم</h2>
+  <br>
+  <video controls>
+    <source src="video/76ea18da1ab43504f23e651c84e1cc67_1754760544477.mp4" type="video/mp4">
+  </video>
+</section>
 
-    if (!endTime || Date.now() > parseInt(endTime)) {
-      endTime = Date.now() + duration;
-      localStorage.setItem("maintenanceEndTime", endTime);
-    }
+<div id="notify">✨ تحديث جديد متاح! اضغط هنا</div>
 
-    const countdownEl = document.getElementById("countdown");
+<button id="chatToggle">🤖</button>
+<div id="chatbot" class="hidden">
+  <div id="chatMessages"></div>
+  <div id="chatInputWrapper">
+    <input type="text" id="chatInput" placeholder="اكتب رسالتك...">
+    <button id="sendBtn">➡️</button>
+  </div>
+</div>
 
-    function updateCountdown() {
-      const now = Date.now();
-      const diff = parseInt(endTime) - now;
+<footer>📝 جميع الحقوق محفوظة © 2025 Fun X 🎉</footer>
 
-      if (diff <= 0) {
-        countdownEl.innerHTML = "✅ الموقع جاهز للعمل!";
-        localStorage.removeItem("maintenanceEndTime");
-        return;
-      }
-
-      const hours = Math.floor(diff / (1000 * 60 * 60));
-      const minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
-      const seconds = Math.floor((diff % (1000 * 60)) / 1000);
-
-      countdownEl.innerHTML = `⏳ ${hours.toString().padStart(2, "0")}:${minutes.toString().padStart(2, "0")}:${seconds.toString().padStart(2, "0")}`;
-    }
-
-    updateCountdown();
-    setInterval(updateCountdown, 1000);
-  </script>
+<script src="script.js"></script>
 </body>
-
 </html>
