--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Fun X</title>
 <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="images/file_0000000059a062309109771ec07a4d2a-01.jpeg">
+<link rel="shortcut icon" type="image/png" href="images/file_0000000059a062309109771ec07a4d2a-01.jpeg">
+
+  <!-- الصورة اللي بتظهر عند مشاركة الرابط -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Fun X">
+<meta property="og:description" content="أفضل موقع ترفيهي Fun X 🔥">
+<meta property="og:image" content="https://kbdalnby180-commits.github.io/wep_fun/images/file_0000000059a062309109771ec07a4d2a-01.jpeg">
+<meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="600">
+<meta property="og:image:height" content="600">
+<meta property="og:url" content="https://kbdalnby180-commits.github.io/wep_fun/">
 </head>
 <body>
 
@@ -55,4 +67,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
