--- a/tool/Fun X/index.html
+++ b/tool/Fun X/index.html
@@ -29,9 +29,8 @@
             </p>
             <ul>
                 <li>الألعاب التفاعلية والمسلية.</li>
-                <li>مشاهدة الفيديوهات والأفلام والمسلسلات مباشرة من المتصفح.</li>
-                <li>الاستماع للموسيقى والأغاني المفضلة.</li>
-                <li>مقاطع القرآن الصوتية لتجربة روحانية تعليمية.</li>
+                <li>مشاهدة الفيديوهات  </li>
+                <li>مقاطع القرآن الصوتية لتجربة روحانية .</li>
             </ul>
             <p>
                 الموقع يتميز بسهولة التصفح وتصميم جذاب وبسيط متوافق مع جميع الأجهزة، مع توفير محتوى متنوع يجمع بين الترفيه والفائدة. 
@@ -41,3 +40,4 @@
     </div>
 </body>
 </html>
+
