--- a/tool/Fun X/index.html
+++ b/tool/Fun X/index.html
@@ -28,9 +28,10 @@
                 موقع <strong>Fun X</strong> هو موقع ترفيهي شامل يهدف لتقديم تجربة ممتعة لجميع الزوار. يجمع بين:
             </p>
             <ul>
-                <li>الألعاب التفاعلية والمسلية.</li>
-                <li>مشاهدة الفيديوهات  </li>
-                <li>مقاطع القرآن الصوتية لتجربة روحانية .</li>
+                <li>🎮الألعاب التفاعلية والمسلية.</li>
+                <li>مشاهدة الفيديوهات🎬  </li>
+                <li>مقاطع القرآن الصوتية لتجربة روحانية🕌 .</li>
+                <li>تطبيقات حياتيه📝</li>
             </ul>
             <p>
                 الموقع يتميز بسهولة التصفح وتصميم جذاب وبسيط متوافق مع جميع الأجهزة، مع توفير محتوى متنوع يجمع بين الترفيه والفائدة. 
@@ -40,4 +41,5 @@
     </div>
 </body>
 </html>
+
 
