Update footer note for responsive design clarity

--- a/wep game/funx_space_v2/index.html
+++ b/wep game/funx_space_v2/index.html
@@ -127,7 +127,7 @@ button,select,input[type=range]{background:transparent;border:1px solid rgba(255
   <div style="margin-top:12px"><button id="closeSettings">اغلاق</button></div>
 </div>
 
-<div class="footerNote">تصميم متجاوب — قلّي أي تعديل تاني تحبه</div>
+<div class="footerNote">تصميم متجاوب مع كل الاجهزة</div>
 
 <script>
 /* FunX Space v2 — Endless | Responsive | Touch / Keyboard / Gamepad | Music & SFX */
