Fix HTML structure and update site logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <header>
   <div id="siteLogoName">
     <img src="images/file_0000000059a062309109771ec07a4d2a-01.jpeg" alt="شعار الموقع" id="siteLogo">
-    <span id="siteName">Fun X – إصدار 1.2</span>
+    <span id="siteName">Fun X </span>
   </div>
   <div id="timeCalendarWrapper">
     <div id="timeCalendar">
@@ -53,7 +53,7 @@
 
 <div id="notify">✨ تحديث جديد متاح! اضغط هنا</div>
 
-<button id="chatToggle">🤖</button>
+<button id="chatToggle">📂</button>
 <div id="chatbot" class="hidden">
   <div id="chatMessages"></div>
   <div id="chatInputWrapper">
@@ -67,6 +67,5 @@
 <script src="script.js"></script>
 </body>
 </html>
-
 
 
